[package]
name = "ax2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

utoipa = { version="3.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version="3.1", features = ["axum"] }

# utoipa = "3.2"
# utoipa-swagger-ui = "3.1"