[package]
name = "ax2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

utoipa = { version="3.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version="3.1", features = ["axum"] }

